--- a/University-MGS-API.csproj
+++ b/University-MGS-API.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.4">
       <PrivateAssets>all</PrivateAssets>
@@ -23,6 +24,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\Monthly Test 1\" />
+    <Folder Include="wwwroot\Uploads\Quiz1\Sub-Quiz 1\" />
   </ItemGroup>
 
 </Project>
