--- a/University-MGS-API.csproj
+++ b/University-MGS-API.csproj
@@ -8,6 +8,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\Monthly Test 1\**" />
+    <Compile Remove="wwwroot\Uploads\Quiz1\**" />
+    <Content Remove="wwwroot\Monthly Test 1\**" />
+    <Content Remove="wwwroot\Uploads\Quiz1\**" />
+    <EmbeddedResource Remove="wwwroot\Monthly Test 1\**" />
+    <EmbeddedResource Remove="wwwroot\Uploads\Quiz1\**" />
+    <None Remove="wwwroot\Monthly Test 1\**" />
+    <None Remove="wwwroot\Uploads\Quiz1\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.4">
@@ -20,11 +32,12 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\Monthly Test 1\" />
-    <Folder Include="wwwroot\Uploads\Quiz1\Sub-Quiz 1\" />
+    <Folder Include="wwwroot\Uploads\Assignments\" />
+    <Folder Include="wwwroot\Uploads\Quizzes\" />
   </ItemGroup>
 
 </Project>
